# DataOrientedSample

./: README.md
1_base/: CMakeLists.txt  Component.h  ComponentAIDummy.h  ComponentCollisionDummy.h  ComponentPhysicsDummy.h  ComponentsManager.h  GameObject.h  Object.h  README.md  main.cpp  main.h
2_reformatted/: CMakeCache.txt  CMakeLists.txt  ComponentsManager.h  GameObject.h  README.md  main.cpp  main.h
3_linted/: CMakeLists.txt  Component.h  ComponentAIDummy.h  ComponentCollisionDummy.h  Object.h  README.md  main.cpp
4_refactored/: CMakeLists.txt  ComponentAIDummy.h  ComponentCollisionDummy.h  ComponentPhysicsDummy.h  GameObject.h  Object.h  README.md  main.cpp
4a_no_inheritance/: ComponentAIDummy.h  ComponentCollisionDummy.h  ComponentPhysicsDummy.h  ComponentsManager.h  GameObject.h  README.md
4b_templated/: CMakeLists.txt  ComponentAIDummy.h  ComponentCollisionDummy.h  ComponentPhysicsDummy.h  ComponentsManager.h  GameObject.h  README.md  main.cpp
5_separate_impl/: CMakeLists.txt  Component.h  ComponentPhysicsDummy.h  ComponentsManager.h  GameObject.cpp  GameObject.h  README.md  main.cpp
6_smart_pointers/: CMakeLists.txt  ComponentAIDummy.cpp  ComponentAIDummy.h  ComponentCollisionDummy.cpp  ComponentCollisionDummy.h  GameObject.cpp  GameObject.h  Object.h  README.md  main.cpp
7_weak_this/: CMakeLists.txt  Component.h  ComponentAIDummy.h  ComponentCollisionDummy.h  ComponentPhysicsDummy.cpp  ComponentPhysicsDummy.h  ComponentsManager.cpp  GameObject.cpp  GameObject.h  Object.cpp  Object.h  README.md  main.cpp
cache_friendly_data/: README.md
cache_friendly_data/0_vector_of_structs/: main.cpp
cache_friendly_data/0_vector_of_structs_array/: CMakeLists.txt  main.cpp
cache_friendly_data/0_vector_of_structs_carray/: main.cpp
cache_friendly_data/0_vector_of_structs_gen_constexpr/: CMakeLists.txt  gen.cpp
cache_friendly_data/1_struct_of_vectors_gen/: CMakeLists.txt  main.cpp
cache_friendly_data/1_templated_gen/: CMakeLists.txt  main.cpp
cache_friendly_data/1_vector_of_structs_gen/: vector_of_structs.cpp
cache_friendly_data/2_filter_row_id_gen/: CMakeLists.txt  main.cpp
cache_friendly_data/2_filter_templated_gen/: CMakeLists.txt  main.cpp
cache_friendly_data/2_row_id_gen/: CMakeLists.txt  main.cpp
cache_friendly_data/3_filter_iterators_gen/: CMakeLists.txt  main.cpp
cache_friendly_data/3_filter_iterators_row_gen/: CMakeLists.txt  main.cpp
cache_friendly_data/3_iterators_row_gen/: CMakeLists.txt  main.cpp
cache_friendly_data/4_filter_function_select_gen/: CMakeLists.txt  gen.cpp  main.cpp
cache_friendly_data/4_filter_row_select_gen/: CMakeLists.txt  main.cpp
memory_management/: README.md
memory_management/arena/: main.cpp
memory_management/pool/: main.cpp
